--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "module": "esnext",
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "forceConsistentCasingInFileNames": true,
+    "noFallthroughCasesInSwitch": true,
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
